--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "start:bazel": "bazelisk run client"
   },
   "dependencies": {
     "next": "10.0.9",
