--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "start:bazel": "bazelisk run client",
     "start:bazel:debug": "bazelisk run client --sandbox_debug",
-    "start:image": "bazelisk run client_image"
+    "start:image": "bazelisk run client_image",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "next": "10.0.9",
@@ -20,6 +21,8 @@
     "@bazel/bazelisk": "^1.7.5",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "patch-package": "^6.4.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
