--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@bazel/bazelisk": "^1.7.5",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
     "patch-package": "^6.4.7",
+    "postcss": "^8.2.9",
+    "tailwindcss": "^2.0.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
