refactor: use expand_template as a copy mechanism
- credits: @duarten
- https://github.com/bazelbuild/rules_nodejs/pull/2577

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,8 +1,13 @@
 load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin", "nodejs_binary")
 load("@npm//next:index.bzl", "next")
 load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
+load(":index.bzl", "nextjs")
 
 package(default_visibility = ["//visibility:public"])
+
+nextjs(
+    name = "example",
+)
 
 filegroup(
     name = "source_files",
