--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "dev:bazel": "bazelisk run example.dev",
-    "start:bazel": "bazelisk run client"
+    "start:bazel": "bazelisk run client",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "next": "10.0.9",
+    "next": "^10.1.2",
     "next-pwa": "^5.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,6 +20,10 @@
     "@bazel/bazelisk": "^1.7.5",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
+    "patch-package": "^6.4.7",
+    "postcss": "^8.2.9",
+    "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3"
   }
 }
